--- a/Html/css/interview.css
+++ b/Html/css/interview.css
@@ -197,6 +197,7 @@ body {
     margin-top: 10px;
     /* Margin above copyright */
 }
+
 /* End footer styles */
 /* Dark mode button styles */
 .dark-mode-button {
@@ -227,13 +228,16 @@ body {
 }
 
 body.dark-mode {
-    background-color:black;
+    background-color: black;
     /* Dark background color */
 }
 
 body.dark-mode .main-header {
     background-color: black;
+    /* Dark background color */
 }
+
 body.dark-mode .social-footer {
     background-color: black;
+    /* Dark background color */
 }
